adjust css to avoid horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vh;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 h1 {
